--- a/Project/style.css
+++ b/Project/style.css
@@ -6,26 +6,36 @@
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+body{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    background: url('https://static01.nyt.com/images/2021/05/21/arts/21Summer-Reading-2021-D/21Summer-Reading-2021-A-05-mobileMasterAt3x.jpg');
+    background-size: cover;
+    background-position: bottom;
+}
 .sidebar{
     position: fixed;
     left: 0;
     width: 250px;
     height: 100%;
-    background-color: #042331;
+    background-color: rgb(28, 28, 29);
 }
 .sidebar header {
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
     line-height: 120px ;
     color: white;
-    background-color: #053850;
+    background-color:rgb(43, 44, 46);
     user-select: none;
 }
 .sidebar ul a{
     display: block;
     height: 100%;
     width: 100%;
-    line-height: 90px;
+    line-height: 70px;
     font-size: 20px;
     color: white;
     padding-left: 40px;
@@ -41,19 +51,60 @@
 ul li:hover a {
     padding-left: 50px;
 }
-.sidebar   img {
-width: 30px;
-height: 30px;
- border-radius: 40px;
+.center  {
+    align-items: center;
+    width: 500px;
+    background-color: white;
+    min-height: 300px;
+    padding:60px 60px;
+    border-radius: 10px;
 }
-.nav {
-   width: 100%;
-   height: 30%;
-   background-color: rgb(190, 132, 25);
+.center input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+     width: 100%;
+     height: 100%;
+     border: 1px solid rgb(207, 207, 207);
+     padding: 12px;
+     outline: none;
+     border-radius: 10px;
+     background: transparent;
 }
-section{
-    background:blue;
-    background-position: center;
-    background-size: cover;
-    height: 13vh;
+.center label {
+     color: black;
+}
+.center button {
+     display: block;
+     width: 100%;
+     padding: 15pX 20px;
+     align-items: center;
+     margin-top: 40px;
+     border: none;
+     background: linear-gradient(120deg,orange,rgb(241, 39, 39));
+     color: white;
+     font-weight: 1000;
+     outline: none;
+     font-size: 14px;
+     cursor: pointer;
+     border-radius: 3px;
+}
+.center button:hover{
+    background: linear-gradient(120deg,orange,rgb(248, 0, 0));
+}
+.sidebar .button{
+    background: linear-gradient(120deg,orange,rgb(241, 39, 39));
+    display: block;
+    padding: 10px;
+    margin-top: 40px;
+    width: 40%;
+    margin-left: 70px;
+    text-align: center;
+    border-radius: 4px;
+}
+.sidebar .button button{
+     border: none;
+     background: transparent;
+     color: white;
+     font-size: 17px;
+     cursor: pointer;
 }
