--- a/Project/style.css
+++ b/Project/style.css
@@ -99,17 +99,33 @@ ul li:hover a {
 .sidebar .button{
     background: linear-gradient(120deg,orange,rgb(241, 39, 39));
     display: block;
-    padding: 10px;
     margin-top: 40px;
-    width: 40%;
+    width: 50%;
     margin-left: 70px;
     text-align: center;
     border-radius: 4px;
 }
 .sidebar .button button{
+     padding:10px;
      border: none;
      background: transparent;
      color: white;
      font-size: 17px;
      cursor: pointer;
+}
+.success{
+    margin-bottom: 40px;
+    width: 100%;
+    height: 3vh;
+    background: rgb(119, 216, 119);
+    border-radius: 3px;
+    text-align: center;
+}
+.error{
+    margin-bottom: 40px;
+    width: 100%;
+    height: 3vh;
+    background: rgb(228, 64, 64);
+    border-radius: 3px;
+    text-align: center;
 }
