--- a/Project/style_delete.css
+++ b/Project/style_delete.css
@@ -12,13 +12,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
-    background: url('/img/j.jpg');
+    background: rgb(120, 139, 139);
     background-size: cover;
     background-position: bottom;
 }
 .sidebar{
     position: fixed;
-    left: 0;
+    left: 0;        
     width: 250px;
     height: 100%;
     background-color: rgb(28, 28, 29);
@@ -118,9 +118,10 @@ ul li:hover a {
     margin-bottom: 40px;
     width: 100%;
     height: 3vh;
-    background: rgb(119, 216, 119);
+    background: rgb(48, 209, 48);
     border-radius: 3px;
     text-align: center;
+    color: white;
 }
 .error{
     margin-bottom: 40px;
@@ -129,6 +130,7 @@ ul li:hover a {
     background: rgb(228, 64, 64);
     border-radius: 3px;
     text-align: center;
+    color: white;
 }
 .errase {
     width: 100%;
