--- a/Project/style.css
+++ b/Project/style.css
@@ -104,6 +104,7 @@ ul li:hover a {
     width: 50%;
     margin-left: 70px;
     text-align: center;
+    cursor: pointer;
     border-radius: 4px;
 }
 .sidebar .button button{
