--- a/Project/show_.css
+++ b/Project/show_.css
@@ -116,73 +116,27 @@ ul li:hover a {
      cursor: pointer;
 
 }
-.success{
-    margin-bottom: 40px;
-    width: 100%;
-    height: 3vh;
-    background: rgb(48, 209, 48);
-    border-radius: 3px;
-    text-align: center;
-    color: white;
+ .content-table{
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 1.5rem;
+    min-width: 400px;
+    margin-left: 15rem;
+    user-select: none;
 }
-.error{
-    margin-bottom: 40px;
-    width: 100%;
-    height: 3vh;
-    background: rgb(228, 64, 64);
-    border-radius: 3px;
-    text-align: center;
-    color: white;
+.content-table thead tr {
+     background-color: #1f0216;
+     text-align: left;
+     color: white;
+     font-weight: bold;
 }
-.errase {
-    width: 100%;
+.content-table th  {
+    padding: 12px 15px;
 }
-@media(max-width : 860px) {
-    .sidebar {
-         height: 100%;
-         width: 170px;
-         left: 0;
-    }
-    .center {
-       height: 100%;
-       width: 400px;
-         margin: 100px 0;
-    }
-    .sidebar ul a {
-       display: block;
-       width: 100%;
-       line-height: 70px;
-       font-size: 19px;
-       color: white;
-       padding-left: 20px;
-       box-sizing: border-box;
-       border-top:  1px solid rgb(68, 61, 61);
-       border-bottom: 1px solid  rgb(68, 61, 61);
-       transition: .4s;
-    }
-    .sidebar .button{
-       background: #3ccfaf;
-       display: block;
-       margin-top: 50px;
-       width: 50%;
-       margin-left: 40px;
-       text-align: center;
-       cursor: pointer;
-       border-radius: 4px;
-   }
-   .sidebar header {
-       font-size: 20px;
-       text-align: center;
-       line-height: 130px ;
-       color: white;
-       background-color:rgb(43, 44, 46);
-       user-select: none;
-   }
-   .sidebar ul a i{
-       margin: 7px;
-       color: rgb(226, 151, 11);
-   }
-   ul li:hover a {
-       padding-left: 25px;
-   }
+.content-table td {
+    background-color: rgb(194, 193, 193);
+     padding: 12px 15px;
+}
+.content-table tbody tr {
+     border-bottom:1px solid #dddddd;
 }
