--- a/Project/show_.css
+++ b/Project/show_.css
@@ -98,7 +98,7 @@ ul li:hover a {
     background: rgb(255, 30, 0);
 }
 .sidebar .button{
-    background: #3ccfaf;
+    background: linear-gradient(120deg,orange,rgb(233, 61, 61));
     display: block;
     margin-top: 90px;
     width: 50%;
