--- a/Project/style.css
+++ b/Project/style.css
@@ -98,7 +98,7 @@ ul li:hover a {
     background: rgb(0, 65, 139);
 }
 .sidebar .button{
-    background: #3ccfaf;
+    background: linear-gradient(120deg,orange,rgb(233, 61, 61));
     display: block;
     margin-top: 90px;
     width: 50%;
