--- a/Authentication/auth.css
+++ b/Authentication/auth.css
@@ -4,7 +4,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
-    background: url('https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/wave.png');
+    background: url('https://coolbackgrounds.io/images/backgrounds/index/compute-ea4c57a4.png');
      background-size: cover;
     background-position: bottom;
     font-family: 'Lato', sans-serif;
@@ -46,7 +46,7 @@ body{
     margin: 40px;
     width: 130px;
     padding: 10px ;
-    background-color: #3ccfaf;
+    background-color: #3c94cf;
     color: white;
     border: none;
     outline: none;
@@ -55,7 +55,7 @@ body{
     cursor: pointer;
 }
 .form button:hover {
-    background-color: #10866c;
+    background-color: #054895;
 }   
 .signup{
     text-align: center;
@@ -64,7 +64,7 @@ body{
 }
 .signup a{
     text-decoration: none;
-    color: #3ccfaf;
+    color: #175fe4;
     margin-left: 8px;
 }
 .signup a:hover{
@@ -75,3 +75,43 @@ body{
      font-weight: 1000;
      color: rgb(93, 90, 90);
 }
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #242f3f;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .loader {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 4px solid #Fff;
+    animation: loader 2s infinite ease;
+  }
+  .loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 2s infinite ease-in;
+  }
+  @keyframes loader {
+    0% { transform: rotate(0deg);}
+    25% { transform: rotate(180deg);}
+    50% { transform: rotate(180deg);}
+    75% { transform: rotate(360deg);}
+    100% { transform: rotate(360deg);}
+  }
+  @keyframes loader-inner {
+    0% { height: 0%;}
+    25% { height: 0%;}
+    50% { height: 100%;}
+    75% { height: 100%;}
+    100% { height: 0%;}
+  }
