--- a/Project/style.css
+++ b/Project/style.css
@@ -12,8 +12,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
-    background: url('https://raw.githubusercontent.com/sefyudem/Responsive-Login-Form/master/img/wave.png');
-     background-size: cover;
+    background: url('https://cdn-welcome.eu.mywebsite-editor.com/obc/user/d7961c16-cf52-4ab8-82a8-dbf8b84a9737/b92570d2-7f5a-4af5-9211-3a377ed8469c');
+    background-size: cover;
     background-position: bottom;
 }
 .sidebar{
@@ -182,3 +182,43 @@ ul li:hover a {
         padding-left: 25px;
     }
 }
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #242f3f;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .loader {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    border: 4px solid #Fff;
+    animation: loader 2s infinite ease;
+  }
+  .loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 2s infinite ease-in;
+  }
+  @keyframes loader {
+    0% { transform: rotate(0deg);}
+    25% { transform: rotate(180deg);}
+    50% { transform: rotate(180deg);}
+    75% { transform: rotate(360deg);}
+    100% { transform: rotate(360deg);}
+  }
+  @keyframes loader-inner {
+    0% { height: 0%;}
+    25% { height: 0%;}
+    50% { height: 100%;}
+    75% { height: 100%;}
+    100% { height: 0%;}
+  }
