--- a/Project/style_delete.css
+++ b/Project/style_delete.css
@@ -14,7 +14,7 @@ body{
     align-items: center ;
     background-size: cover;
     background-position: bottom;
-    background: url('https://cdn-welcome.eu.mywebsite-editor.com/obc/user/d7961c16-cf52-4ab8-82a8-dbf8b84a9737/b92570d2-7f5a-4af5-9211-3a377ed8469c');
+    background: url('https://coolbackgrounds.io/images/backgrounds/index/compute-ea4c57a4.png');
 }
 .sidebar{
     position: fixed;
@@ -98,7 +98,7 @@ ul li:hover a {
     background: rgb(255, 30, 0);
 }
 .sidebar .button{
-    background: linear-gradient(120deg,orange,rgb(233, 61, 61));
+    background: #0f4468;
     display: block;
     margin-top: 90px;
     width: 50%;
