--- a/Project/set.css
+++ b/Project/set.css
@@ -53,17 +53,22 @@ ul li:hover a {
 }
 .center  {
     align-items: center;
-    width: 900px;
-    background-color: white;
+    background-color: rgb(255, 240, 240);
     min-height: 300px;
     padding:60px 60px;
     border-radius: 10px;
     margin-left: 15rem;
     height: 500px;
+    width: 900px;
+}
+.center h1 {
+     text-align: center;
+     line-height: 90px;
+     background-color: cadetblue;
 }
 .center input {
-    margin-top: 10px;
-    margin-bottom: 10px;
+     margin-top: 10px;
+     margin-bottom: 10px;
      width: 100%;
      height: 100%;
      border: 1px solid rgb(207, 207, 207);
@@ -86,7 +91,7 @@ ul li:hover a {
      align-items: center;
      margin-top: 40px;
      border: none;
-     background: rgb(255, 66, 49);
+     background: rgb(8, 122, 253);
      color: white;
      font-weight: 1000;
      outline: none;
@@ -96,7 +101,7 @@ ul li:hover a {
      transition: .3s;
 }
 .center button:hover{
-    background: rgb(255, 30, 0);
+    background: rgb(3, 94, 136);
 }
 .sidebar .button{
     background:#0f4468;
@@ -180,4 +185,8 @@ ul li:hover a {
     50% { height: 100%;}
     75% { height: 100%;}
     100% { height: 0%;}
+  }
+  small {
+       font-size: 12px;
+       font-weight: bold;
   }
