--- a/css/set.css
+++ b/css/set.css
@@ -18,18 +18,17 @@ body{
 }
 .sidebar{
     position: fixed;
-    left: 0;        
+    left: 0;
     width: 250px;
     height: 100%;
     background-color: rgb(28, 28, 29);
 }
 .sidebar header {
-    font-size: 35px;
     text-align: center;
-    line-height: 120px ;
     color: white;
-    background-color:rgb(43, 44, 46);
     user-select: none;
+    font-size: 23px;
+    margin-bottom:40px;
 }
 .sidebar ul a{
     display: block;
@@ -49,11 +48,17 @@ body{
     color: rgb(226, 151, 11);
 }
 ul li:hover a {
-    padding-left: 50px;
+    background-color: rgb(120, 192, 4);
+}
+.sidebar img {
+     width: 100px;
+     height: 100px;
+     border-radius: 100px;
+     margin-top: 30px;
 }
 .center  {
     align-items: center;
-    background-color: rgb(255, 240, 240);
+    background-color: white;
     min-height: 300px;
     padding:60px 60px;
     border-radius: 10px;
@@ -68,7 +73,6 @@ ul li:hover a {
 }
 .center input {
      margin-top: 10px;
-     margin-bottom: 10px;
      width: 100%;
      height: 100%;
      border: 1px solid rgb(207, 207, 207);
@@ -83,6 +87,13 @@ ul li:hover a {
 }
 .center label {
      color: black;
+}
+.center img {
+     width: 100px;
+     height: 100px;
+     display: flex;
+     border-radius: 100px;
+     margin-left: 20rem;
 }
 .center button {
      display: block;
