--- a/css/show_.css
+++ b/css/show_.css
@@ -18,18 +18,17 @@ body{
 }
 .sidebar{
     position: fixed;
-    left: 0;        
+    left: 0;
     width: 250px;
     height: 100%;
     background-color: rgb(28, 28, 29);
 }
 .sidebar header {
-    font-size: 35px;
     text-align: center;
-    line-height: 120px ;
     color: white;
-    background-color:rgb(43, 44, 46);
     user-select: none;
+    font-size: 23px;
+    margin-bottom:40px;
 }
 .sidebar ul a{
     display: block;
@@ -49,7 +48,13 @@ body{
     color: rgb(226, 151, 11);
 }
 ul li:hover a {
-    padding-left: 50px;
+    background-color: rgb(120, 192, 4);
+}
+.sidebar img {
+     width: 100px;
+     height: 100px;
+     border-radius: 100px;
+     margin-top: 30px;
 }
 .center  {
     align-items: center;
