--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,11 @@ body{
     background-color: rgb(28, 28, 29);
 }
 .sidebar header {
-    font-size: 35px;
     text-align: center;
-    line-height: 120px ;
     color: white;
-    background-color:#12151a;
     user-select: none;
+    font-size: 23px;
+    margin-bottom:40px;
 }
 .sidebar ul a{
     display: block;
@@ -49,7 +48,13 @@ body{
     color: rgb(226, 151, 11);
 }
 ul li:hover a {
-    padding-left: 50px;
+    background-color: rgb(120, 192, 4);
+}
+.sidebar img {
+     width: 100px;
+     height: 100px;
+     border-radius: 100px;
+     margin-top: 30px;
 }
 .center  {
     align-items: center;
