--- a/css/show_.css
+++ b/css/show_.css
@@ -48,13 +48,16 @@ body{
     color: rgb(226, 151, 11);
 }
 ul li:hover a {
-    background-color: rgb(120, 192, 4);
+    background-color: rgb(3, 18, 31);
 }
 .sidebar img {
      width: 100px;
      height: 100px;
      border-radius: 100px;
      margin-top: 30px;
+}
+.sidebar h4 {
+     margin-top: 10px;
 }
 .center  {
     align-items: center;
