--- a/css/show_.css
+++ b/css/show_.css
@@ -12,6 +12,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
+    background-image: url("https://i.pinimg.com/originals/54/20/1d/54201da4cd81a892f5738e79977c285d.jpg");
     background-size: cover;
     background-position: bottom;
 }
@@ -107,12 +108,12 @@ ul li:hover a {
 .sidebar .button{
     background: #0f4468;
     display: block;
-    margin-top: 90px;
+    margin-top: 50px;
     width: 50%;
-    margin-left: 70px;
+    margin-left: 60px;
     text-align: center;
-    border-radius: 4px;
     cursor: pointer;
+    border-radius: 4px;
 }
 .sidebar .button button{
      padding:10px;
@@ -121,7 +122,6 @@ ul li:hover a {
      color: white;
      font-size: 17px;
      cursor: pointer;
-
 }
  .content-table{
     border-collapse: collapse;
