--- a/css/set.css
+++ b/css/set.css
@@ -100,7 +100,7 @@ ul li:hover a {
      align-items: center;
      margin-top: 40px;
      border: none;
-     background: rgb(8, 122, 253);
+     background: linear-gradient(120deg,rgb(255, 37, 37),orange);
      color: white;
      font-weight: 1000;
      outline: none;
@@ -111,10 +111,10 @@ ul li:hover a {
 }
 
 .center button:hover{
-    background: rgb(3, 94, 136);
+    background: linear-gradient(120deg,rgb(255, 0, 0),orange);
 }
 .sidebar .button{
-    background: #0f4468;
+    background: linear-gradient(120deg,blue,black);
     display: block;
     margin-top: 50px;
     width: 50%;
