--- a/css/auth.css
+++ b/css/auth.css
@@ -4,9 +4,9 @@ body{
     height: 100vh;
     align-items: center ;
     background: url('https://ask.brightcoding.dev/assets/images/frontend/auth/60e1c2a3a3b721625408163.jpg');
-     background-size: cover;
+    background-size: cover;
     background-position: bottom;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 .center {
      width: 400px;
@@ -114,3 +114,23 @@ body{
     75% { height: 100%;}
     100% { height: 0%;}
   }
+  
+  input[type="file"]{
+    display: none;
+  }
+  .form .label {
+     height: 50px;
+     width: 220px;
+     margin-top: 20px;
+     border-radius: 3px;
+     cursor: pointer;
+     background:#f5af09;
+     text-align: center;
+     justify-content: center;
+     align-items: center;
+     display: flex;
+     left: 0;
+     right: 0;
+     color: white;
+  }
+ 
