--- a/css/style_delete.css
+++ b/css/style_delete.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 body{
     width: 100%;
@@ -35,9 +35,8 @@ body{
     height: 100%;
     width: 100%;
     line-height: 70px;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
-    padding-left: 40px;
     box-sizing: border-box;
     border-top:  1px solid rgb(68, 61, 61);
     border-bottom: 1px solid  rgb(68, 61, 61);
