--- a/css/style_delete.css
+++ b/css/style_delete.css
@@ -47,7 +47,8 @@ body{
     color: rgb(226, 151, 11);
 }
 ul li:hover a {
-    background-color: rgb(3, 18, 31);
+    background: rgb(59, 59, 59) ;
+    margin-left: 1px;
 }
 .sidebar img {
      width: 100px;
