--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
-    background-image: url("https://i.pinimg.com/originals/54/20/1d/54201da4cd81a892f5738e79977c285d.jpg");
+    background-image: url("https://ask.brightcoding.dev/assets/images/frontend/auth/60e1c2a3a3b721625408163.jpg");
     background-size: cover;
     background-position: bottom;
 }
