--- a/css/auth.css
+++ b/css/auth.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     height: 100vh;
     align-items: center ;
-    background: url('https://ask.brightcoding.dev/assets/images/frontend/auth/60e1c2a3a3b721625408163.jpg');
+    background: url('https://login.opendns.com/img/bg/opendns-bg.jpg');
     background-size: cover;
     background-position: bottom;
     font-family: 'Montserrat', sans-serif;
@@ -132,5 +132,15 @@ body{
      left: 0;
      right: 0;
      color: white;
+  }
+  .forget {
+     margin-top: 20px;
+  }
+  .forget a{
+     color: blue;
+     text-decoration: none;
+  }
+  .forget a:hover {
+    text-decoration: underline;
   }
  
