--- a/css/set.css
+++ b/css/set.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center ;
-    background-image: url("https://ask.brightcoding.dev/assets/images/frontend/auth/60e1c2a3a3b721625408163.jpg");
+    background-color: rgb(22, 22, 22);
     background-size: cover;
     background-position: bottom;
 }
@@ -21,7 +21,7 @@ body{
     left: 0;
     width: 250px;
     height: 100%;
-    background-color: rgb(28, 28, 29);
+    background-color: rgb(5, 5, 5);
 }
 .sidebar header {
     text-align: center;
@@ -34,7 +34,7 @@ body{
     display: block;
     height: 100%;
     width: 100%;
-    line-height: 70px;
+    line-height: 10px;
     font-size: 18px;
     color: white;
     box-sizing: border-box;
@@ -43,11 +43,11 @@ body{
     transition: .4s;
 }
 .sidebar ul a i{
-    margin: 20px;
-    color: rgb(226, 151, 11);
+    margin: 30px;
+    color: rgb(226, 11, 11);
 }
 ul li:hover a {
-    background: rgb(59, 59, 59) ;
+    background: rgb(26, 26, 26) ;
     margin-left: 1px;
 }
 .sidebar img {
@@ -100,7 +100,7 @@ ul li:hover a {
      align-items: center;
      margin-top: 40px;
      border: none;
-     background: linear-gradient(120deg,rgb(255, 37, 37),orange);
+     background: rgb(36, 35, 35);
      color: white;
      font-weight: 1000;
      outline: none;
@@ -111,7 +111,8 @@ ul li:hover a {
 }
 
 .center button:hover{
-    background: linear-gradient(120deg,rgb(255, 0, 0),orange);
+    background-color: black;
+    transition: .4s;
 }
 .sidebar .button{
     background: linear-gradient(120deg,blue,black);
@@ -137,7 +138,7 @@ ul li:hover a {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #242f3f;
+    background-color: #050505;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -147,14 +148,14 @@ ul li:hover a {
     width: 30px;
     height: 30px;
     position: relative;
-    border: 4px solid #Fff;
+    border: 4px solid rgb(245, 0, 0);
     animation: loader 2s infinite ease;
   }
   .loader-inner {
     vertical-align: top;
     display: inline-block;
     width: 100%;
-    background-color: #fff;
+    background-color: rgb(245, 4, 4);
     animation: loader-inner 2s infinite ease-in;
   }
   @keyframes loader {
