--- a/css/show_.css
+++ b/css/show_.css
@@ -181,7 +181,7 @@ body{
     margin-left: 15rem;
 }
 .content-table thead tr {
-     background-color: #1f0216;
+     background-color: #1d1b31;
      text-align: left;
      color: white;
      font-weight: bold;
