--- a/css/style.css
+++ b/css/style.css
@@ -76,40 +76,32 @@ body{
     margin: 20px;
 }
 .sidebar .profile-details {
-     position: fixed;
-     bottom: 0;
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-}
-.sidebar .profile-details img{
-    height: 52px;
-    width: 52px;
-    object-fit: cover;
-    border-radius: 16px ;
-    margin: 0 12px 0 12px;
-    background: #1d1b31;
-    padding: 10px;
-}
-.sidebar .profile-details .profile_name{
-    font-size: 18px;
-    color: #fff;
-    font-weight: 600;
+    position: fixed;
+    bottom: 0;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.sidebar .profile-details img {
+     height: 52px;
+     width: 52px;
+     border-radius: 10px;
+     padding: 10px;
+     background: #1d1b31;
+     object-fit: cover;
+     margin: 0 14px 0 12px;
+}
+.sidebar .profile-details i{
+    margin-left: 100px;
+    font-size: 25px;
+}
+.sidebar .profile-details p{
+     color: #fff;
+     font-weight: 600;
 }
 .sidebar .profile-details .job{
-    font-size: 15px;
-    color: #fff;
-    font-weight: 300;
+     color: #fff;
 }
-.sidebar .profile-details  button{
-    background: transparent;
-    color: #fff;
-    border: none;
-    font-size: 20px;
-    margin-top: 20px;
-}
-
 .center  {
     align-items: center;
     width: 900px;
@@ -155,24 +147,6 @@ body{
 }
 .center button:hover{
     background: rgb(2, 141, 2);
-}
-.sidebar .button{
-    background:red;
-    display: block;
-    margin-top: 50px;
-    width: 50%;
-    margin-left: 60px;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 4px;
-}
-.sidebar .button button{
-     padding:10px;
-     border: none;
-     background: transparent;
-     color: white;
-     font-size: 17px;
-     cursor: pointer;
 }
 
 .success{
